# birdclef2025

./: data_exploration.ipynb  model_mel_cnn2.ipynb  model_yamnet.ipynb  model_yamnet.py  model_yamnet_boosted.ipynb  model_yamnet_optim.ipynb  model_yamnet_optimized.ipynb  pyproject.toml
models/: boosted_model.pkl
